[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hearthlight_model_zoo"
version = "0.1.0"
description = "Commodity model adapters for Hearthlight"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
]

[tool.setuptools.packages.find]
where = ["src"]

