[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hearthlight_model_zoo"
version = "0.1.0"
description = "Commodity model adapters for Hearthlight"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
pose = [
  "onnxruntime>=1.17",
  "opencv-python-headless>=4.8",
]
full = [
  "onnxruntime>=1.17",
  "opencv-python-headless>=4.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hearthlight_model_zoo = ["master_catalog.json"]
